# rust-tests

./: .gitignore  Cargo.toml
examples/: .gitattributes  consumer.rs  custom_serde_deserialize.rs  default_trait.rs  electron_simple.body.txt  electron_simple.request.txt  failure.rs  matching.rs  multipart_stream.rs  option_tests.rs  param_parser.rs  producer.rs  serde.rs  serde_mp.rs  serde_remote_serialize.rs  strings.rs  traits.rs
src/: main.rs  pii.rs
