[package]
name = "rust-tests"
version = "0.1.0"
authors = ["Radu Woinaroski <radu@sentry.io>"]
edition = "2018"

[dependencies]
hmac = "0.7.1"
#rdkafka = "0.21.0"
futures = "0.1.28"
chrono = "0.4.7"
serde = { version = "1.0.98", features = ["derive"] }
rmp-serde = "0.14.0"
serde_json = "1.0.40"
bytes = { version = "0.4.12", features = ["serde"] }
regex = "1.3.1"
lazy_static = "1.3.0"
insta = "0.11.0"
log = "0.4.8"
simple_logger = "1.6.0"
actix-web = "0.7.19"
tokio = "0.1"
failure = "0.1.6"

[dev-dependencies]
